[package]
name = "green_moon"
version = "0.1.0"
authors = ["Willi Kappler, grandor@gmx.de"]
license = "MIT"
description = "2D game engine for Rust."
readme = "README.md"
repository = "https://github.com/willi-kappler/green_moon"
exclude = ["*.png", "example", "target"]
keywords = ["2D", "gamge", "engine", "game engine", "SDL"]
documentation = "https://docs.rs/darwin-rs/0.3.0/darwin_rs/"



[dependencies]
sdl2 = "0.27"
#sdl2_gfx = "0.24"
#sdl2_mixer = "0.25"
error-chain = "0.7.2"
